<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:elevation="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:src="@drawable/ieee1"
            android:padding="40dp" />


                <LinearLayout
                    android:background="@drawable/grad1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
<android.support.v7.widget.CardView
    android:id="@+id/cv1"
    app:cardCornerRadius="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="20dp"
    android:elevation="100dp"
    android:layout_margin="20dp"
    android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/notosans"
                        android:layout_marginBottom="24dp"
                        android:text="@string/about1"
                        android:textColor="#000000"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tt1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/notosans"
                        android:text="@string/about_content"
                        android:justificationMode="inter_word"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        />
                </LinearLayout>
</android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="gone"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp"
                android:id="@+id/cv2"
                android:layout_margin="20dp"
                android:elevation="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="25dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tt2"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/notosans"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="24dp"
                        android:text="@string/about2"
                        android:textColor="#000000"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tt3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/notosans"
                        android:layout_marginBottom="20dp"
                        android:textColor="#000000"

                        android:text="@string/about2_content"
                        android:textSize="16dp"
                        android:justificationMode="inter_word" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>




        </LinearLayout>
        </ScrollView>

    </FrameLayout>
</io.codetail.widget.RevealFrameLayout>